# rival-simulation-demo

./: main.py  pyproject.toml
robot_2025/: README.md  __init__.py  main.py  requirements.txt
robot_2025/assets/simulation/: robot.urdf
robot_2025/config/: config.yaml
robot_2025/models/: __init__.py  joint.py
robot_2025/nodes/: __init__.py  joint_state_test.py  sim.py
